crates/backends/postgres/tests/snapshots/postgres__roles_markdown.snap
---
source: crates/backends/postgres/tests/postgres.rs
expression: markdown
---
# Database: `access`

## Database

### `dbmd_test_aac43c6f57e3090d`

**Owner:** `postgres`

**Encoding:** `UTF8`

**Locale provider:** `libc`

**LC_COLLATE:** `en_US.utf8`

**LC_CTYPE:** `en_US.utf8`

**Tablespace:** `pg_default`

**Template:** no

**Allows connections:** yes

**Connection limit:** -1



## Cluster Databases

### `dbmd_test_aac43c6f57e3090d`

**Owner:** `postgres`

**Encoding:** `UTF8`

**Locale provider:** `libc`

**LC_COLLATE:** `en_US.utf8`

**LC_CTYPE:** `en_US.utf8`

**Tablespace:** `pg_default`

**Template:** no

**Allows connections:** yes

**Connection limit:** -1



### `postgres`

default administrative connection database

**Owner:** `postgres`

**Encoding:** `UTF8`

**Locale provider:** `libc`

**LC_COLLATE:** `en_US.utf8`

**LC_CTYPE:** `en_US.utf8`

**Tablespace:** `pg_default`

**Template:** no

**Allows connections:** yes

**Connection limit:** -1



### `template0`

unmodifiable empty database

**Owner:** `postgres`

**Encoding:** `UTF8`

**Locale provider:** `libc`

**LC_COLLATE:** `en_US.utf8`

**LC_CTYPE:** `en_US.utf8`

**Tablespace:** `pg_default`

**Template:** yes

**Allows connections:** no

**Connection limit:** -1



### `template1`

default template for new databases

**Owner:** `postgres`

**Encoding:** `UTF8`

**Locale provider:** `libc`

**LC_COLLATE:** `en_US.utf8`

**LC_CTYPE:** `en_US.utf8`

**Tablespace:** `pg_default`

**Template:** yes

**Allows connections:** yes

**Connection limit:** -1



## Tablespaces

### `pg_default`

**Owner:** `postgres`

**Location:** `<redacted>`



### `pg_global`

**Owner:** `postgres`

**Location:** `<redacted>`



## Namespaces

| Name | Owner | Comment |
|---|---|---|
| `public` | `pg_database_owner` | standard public schema |


## Roles

### `analyst`

Human analytics login

**Login:** yes

**Superuser:** no

**Inherit:** yes

**Create role:** no

**Create database:** no

**Replication:** no

**Bypass row-level security:** no

**Connection limit:** 3

**Password configured:** yes

**Valid until:** `2030-01-02 03:04:05+00`

**Configuration:** `statement_timeout=5s`

**Member of:** `reporting`; grantor `postgres`; admin yes; inherit no; set yes



### `reporting`

Read-only reporting capability

**Login:** no

**Superuser:** no

**Inherit:** yes

**Create role:** no

**Create database:** no

**Replication:** no

**Bypass row-level security:** no

**Connection limit:** -1

**Password configured:** yes



## Object Privileges

### `database template0 → PUBLIC CONNECT`

**Object type:** `database`

**Object:** `template0`

**Grantor:** `postgres`

**Grantee:** `PUBLIC`

**Privilege:** `CONNECT`



### `database template0 → postgres CREATE`

**Object type:** `database`

**Object:** `template0`

**Grantor:** `postgres`

**Grantee:** `postgres`

**Privilege:** `CREATE`



### `database template0 → postgres CONNECT`

**Object type:** `database`

**Object:** `template0`

**Grantor:** `postgres`

**Grantee:** `postgres`

**Privilege:** `CONNECT`



### `database template0 → postgres TEMPORARY`

**Object type:** `database`

**Object:** `template0`

**Grantor:** `postgres`

**Grantee:** `postgres`

**Privilege:** `TEMPORARY`



### `database template1 → PUBLIC CONNECT`

**Object type:** `database`

**Object:** `template1`

**Grantor:** `postgres`

**Grantee:** `PUBLIC`

**Privilege:** `CONNECT`



### `database template1 → postgres CREATE`

**Object type:** `database`

**Object:** `template1`

**Grantor:** `postgres`

**Grantee:** `postgres`

**Privilege:** `CREATE`



### `database template1 → postgres CONNECT`

**Object type:** `database`

**Object:** `template1`

**Grantor:** `postgres`

**Grantee:** `postgres`

**Privilege:** `CONNECT`



### `database template1 → postgres TEMPORARY`

**Object type:** `database`

**Object:** `template1`

**Grantor:** `postgres`

**Grantee:** `postgres`

**Privilege:** `TEMPORARY`



### `schema public → PUBLIC USAGE`

**Object type:** `schema`

**Object:** `public`

**Grantor:** `pg_database_owner`

**Grantee:** `PUBLIC`

**Privilege:** `USAGE`



### `schema public → pg_database_owner USAGE`

**Object type:** `schema`

**Object:** `public`

**Grantor:** `pg_database_owner`

**Grantee:** `pg_database_owner`

**Privilege:** `USAGE`



### `schema public → pg_database_owner CREATE`

**Object type:** `schema`

**Object:** `public`

**Grantor:** `pg_database_owner`

**Grantee:** `pg_database_owner`

**Privilege:** `CREATE`



## Extensions

### `plpgsql`

PL/pgSQL procedural language

**Owner:** `postgres`

**Schema:** `pg_catalog`

**Version:** `1.0`

**Relocatable:** no

**Owned objects:** 4 (`function`: 3, `language`: 1)
