crates/backends/postgres/tests/snapshots/postgres__schema_objects.snap
---
source: crates/backends/postgres/tests/postgres.rs
expression: snapshot
---
id: catalog
display_name: ~
catalog:
  database:
    name: dbmd_test_ea669c1aa57a606b
    owner: postgres
    encoding: UTF8
    locale_provider: libc
    lc_collate: en_US.utf8
    lc_ctype: en_US.utf8
    locale: ~
    icu_rules: ~
    collation_version: ~
    tablespace: pg_default
    template: false
    allow_connections: true
    connection_limit: -1
    configuration: []
    comment: ~
  cluster_databases: []
  tablespaces: []
  namespaces:
    - name: catalog
      owner: postgres
      extension: ~
      comment: ~
    - name: empty_space
      owner: postgres
      extension: ~
      comment: Reserved for future objects
    - name: public
      owner: pg_database_owner
      extension: ~
      comment: standard public schema
  enums:
    - namespace: catalog
      name: account_state
      owner: postgres
      extension: ~
      comment: Lifecycle of an account
      values:
        - invited
        - active
        - suspended
  composite_types: []
  domains: []
  base_types: []
  range_types: []
  sequences:
    - namespace: catalog
      name: accounts_id_seq
      owner: postgres
      extension: ~
      data_type: bigint
      start: 1
      minimum: 1
      maximum: 9223372036854775807
      increment: 1
      cache: 1
      cycle: false
      persistence: permanent
      owned_by: catalog.accounts.id
      comment: ~
      definition: "CREATE SEQUENCE \"catalog\".\"accounts_id_seq\" AS bigint INCREMENT BY 1 MINVALUE 1 MAXVALUE 9223372036854775807 START WITH 1 CACHE 1 NO CYCLE OWNED BY catalog.accounts.id;"
  tables:
    - namespace: catalog
      name: accounts
      extension: ~
      comment: ~
      columns:
        - name: id
          data_type: bigint
          collation: ~
          nullable: false
          default: ~
          comment: ~
          enum_values: []
          identity: by_default
          generated: ~
          storage: plain
          compression: ~
          statistics_target: -1
          options: []
          foreign_options: []
          locally_defined: true
          inheritance_count: 0
        - name: email
          data_type: text
          collation: "pg_catalog.\"default\""
          nullable: false
          default: ~
          comment: ~
          enum_values: []
          identity: ~
          generated: ~
          storage: extended
          compression: ~
          statistics_target: -1
          options: []
          foreign_options: []
          locally_defined: true
          inheritance_count: 0
        - name: state
          data_type: catalog.account_state
          collation: ~
          nullable: false
          default: "'invited'::catalog.account_state"
          comment: ~
          enum_values:
            - invited
            - active
            - suspended
          identity: ~
          generated: ~
          storage: plain
          compression: ~
          statistics_target: -1
          options: []
          foreign_options: []
          locally_defined: true
          inheritance_count: 0
      constraints:
        - name: accounts_email_not_null
          kind: not_null
          columns:
            - email
          expression: ~
          references: ~
          definition: NOT NULL email
          exclusion_operators: []
          deferrable: false
          initially_deferred: false
          enforced: true
          validated: true
          locally_defined: true
          no_inherit: false
          temporal: false
          comment: ~
        - name: accounts_id_not_null
          kind: not_null
          columns:
            - id
          expression: ~
          references: ~
          definition: NOT NULL id
          exclusion_operators: []
          deferrable: false
          initially_deferred: false
          enforced: true
          validated: true
          locally_defined: true
          no_inherit: false
          temporal: false
          comment: ~
        - name: accounts_pkey
          kind: primary_key
          columns:
            - id
          expression: ~
          references: ~
          definition: PRIMARY KEY (id)
          exclusion_operators: []
          deferrable: false
          initially_deferred: false
          enforced: true
          validated: true
          locally_defined: true
          no_inherit: true
          temporal: false
          comment: ~
        - name: accounts_state_not_null
          kind: not_null
          columns:
            - state
          expression: ~
          references: ~
          definition: NOT NULL state
          exclusion_operators: []
          deferrable: false
          initially_deferred: false
          enforced: true
          validated: true
          locally_defined: true
          no_inherit: false
          temporal: false
          comment: ~
      indexes:
        - name: accounts_pkey
          extension: ~
          unique: true
          terms:
            - target:
                column: id
              collation: ~
              operator_class: pg_catalog.int8_ops
              operator_class_parameters: []
              order: ascending
              nulls_order: last
          predicate: ~
          definition: CREATE UNIQUE INDEX accounts_pkey ON catalog.accounts USING btree (id)
          method: btree
          included_columns: []
          nulls_not_distinct: false
          valid: true
          ready: true
          clustered: false
          replica_identity: false
          owner: postgres
          tablespace: ~
          options: []
          partitioned: false
          parent_index: ~
          constraint: accounts_pkey
          comment: ~
      kind: table
      owner: postgres
      persistence: permanent
      access_method: heap
      typed_table: ~
      replica_identity: default
      options: []
      foreign: ~
      tablespace: ~
      inherits: []
      partition_key: ~
      partition_parent: ~
      partition_bound: ~
      row_level_security: false
      force_row_level_security: false
      policies: []
  views:
    - namespace: catalog
      name: account_counts
      extension: ~
      definition: " SELECT state,\n    count(*) AS account_count\n   FROM catalog.accounts\n  GROUP BY state;"
      materialized: true
      comment: ~
      columns:
        - name: state
          data_type: catalog.account_state
          collation: ~
          nullable: true
          default: ~
          comment: ~
          enum_values:
            - invited
            - active
            - suspended
          identity: ~
          generated: ~
          storage: plain
          compression: ~
          statistics_target: -1
          options: []
          foreign_options: []
          locally_defined: true
          inheritance_count: 0
        - name: account_count
          data_type: bigint
          collation: ~
          nullable: true
          default: ~
          comment: ~
          enum_values: []
          identity: ~
          generated: ~
          storage: plain
          compression: ~
          statistics_target: -1
          options: []
          foreign_options: []
          locally_defined: true
          inheritance_count: 0
      indexes:
        - name: account_counts_state_idx
          extension: ~
          unique: false
          terms:
            - target:
                column: state
              collation: ~
              operator_class: pg_catalog.enum_ops
              operator_class_parameters: []
              order: ascending
              nulls_order: last
          predicate: ~
          definition: CREATE INDEX account_counts_state_idx ON catalog.account_counts USING btree (state)
          method: btree
          included_columns: []
          nulls_not_distinct: false
          valid: true
          ready: true
          clustered: false
          replica_identity: false
          owner: postgres
          tablespace: ~
          options: []
          partitioned: false
          parent_index: ~
          constraint: ~
          comment: Supports state lookups on the account summary
      owner: postgres
      persistence: permanent
      access_method: heap
      tablespace: ~
      options:
        - fillfactor=80
      populated: false
      security_barrier: false
      security_invoker: false
      check_option: ~
    - namespace: catalog
      name: active_accounts
      extension: ~
      definition: " SELECT id,\n    email\n   FROM catalog.accounts\n  WHERE state = 'active'::catalog.account_state;"
      materialized: false
      comment: Accounts allowed to sign in
      columns:
        - name: id
          data_type: bigint
          collation: ~
          nullable: true
          default: ~
          comment: ~
          enum_values: []
          identity: ~
          generated: ~
          storage: plain
          compression: ~
          statistics_target: -1
          options: []
          foreign_options: []
          locally_defined: true
          inheritance_count: 0
        - name: email
          data_type: text
          collation: "pg_catalog.\"default\""
          nullable: true
          default: ~
          comment: ~
          enum_values: []
          identity: ~
          generated: ~
          storage: extended
          compression: ~
          statistics_target: -1
          options: []
          foreign_options: []
          locally_defined: true
          inheritance_count: 0
      indexes: []
      owner: postgres
      persistence: permanent
      access_method: ~
      tablespace: ~
      options:
        - security_barrier=true
        - security_invoker=true
        - check_option=local
      populated: true
      security_barrier: true
      security_invoker: true
      check_option: local
  triggers: []
  functions:
    - namespace: catalog
      name: normalize_email
      extension: ~
      signature: (value text)
      arguments: value text
      definition: "CREATE OR REPLACE FUNCTION catalog.normalize_email(value text)\n RETURNS text\n LANGUAGE sql\n IMMUTABLE PARALLEL SAFE\nRETURN lower(TRIM(BOTH FROM value))\n"
      comment: Normalizes an email address
      return_type: text
      owner: postgres
      kind: ordinary
      language: sql
      volatility: immutable
      parallel: safe
      security_definer: false
      strict: false
      leakproof: false
      returns_set: false
      support_function: ~
      cost: "100"
      rows: ~
      configuration: []
      transforms: []
  procedures:
    - namespace: catalog
      name: archive_account
      extension: ~
      signature: "(IN account_id bigint, INOUT archived boolean, IN reason text)"
      arguments: "IN account_id bigint, INOUT archived boolean, IN reason text DEFAULT 'manual'::text"
      definition: "CREATE OR REPLACE PROCEDURE catalog.archive_account(IN account_id bigint, INOUT archived boolean, IN reason text DEFAULT 'manual'::text)\n LANGUAGE plpgsql\n SECURITY DEFINER\n SET search_path TO 'catalog', 'pg_temp'\nAS $procedure$\nBEGIN\n    archived := account_id > 0 AND reason <> '';\nEND;\n$procedure$\n"
      comment: Marks an account archive request
      owner: postgres
      language: plpgsql
      security_definer: true
      configuration:
        - "search_path=catalog, pg_temp"
      transforms: []
  aggregates: []
  casts: []
  conversions: []
  operators: []
  operator_families: []
  operator_classes: []
  access_methods: []
  languages:
    - name: plpgsql
      owner: postgres
      extension: plpgsql
      procedural: true
      trusted: true
      handler: pg_catalog.plpgsql_call_handler()
      inline_handler: pg_catalog.plpgsql_inline_handler(pg_catalog.internal)
      validator: pg_catalog.plpgsql_validator(pg_catalog.oid)
      comment: PL/pgSQL procedural language
  transforms: []
  rules: []
  event_triggers: []
  statistics: []
  foreign_data_wrappers: []
  foreign_servers: []
  user_mappings: []
  text_search_parsers: []
  text_search_templates: []
  text_search_dictionaries: []
  text_search_configurations: []
  extensions:
    - name: plpgsql
      owner: postgres
      namespace: pg_catalog
      relocatable: false
      version: "1.0"
      configuration: []
      members:
        - object_type: function
          names:
            - pg_catalog
            - plpgsql_call_handler
          arguments: []
        - object_type: function
          names:
            - pg_catalog
            - plpgsql_inline_handler
          arguments:
            - pg_catalog.internal
        - object_type: function
          names:
            - pg_catalog
            - plpgsql_validator
          arguments:
            - pg_catalog.oid
        - object_type: language
          names:
            - plpgsql
          arguments: []
      comment: PL/pgSQL procedural language
  publications: []
  subscriptions: []
  privileges:
    - object_kind: schema
      object_identity: public
      grantor: pg_database_owner
      grantee: PUBLIC
      privilege: usage
      grantable: false
    - object_kind: schema
      object_identity: public
      grantor: pg_database_owner
      grantee: pg_database_owner
      privilege: create
      grantable: false
    - object_kind: schema
      object_identity: public
      grantor: pg_database_owner
      grantee: pg_database_owner
      privilege: usage
      grantable: false
  default_privileges: []
  security_labels: []
  large_objects: []
  roles: []
  role_database_settings: []
  collations: []
