crates/backends/postgres/tests/snapshots/postgres__schema_objects_markdown.snap
---
source: crates/backends/postgres/tests/postgres.rs
expression: markdown
---
# Database: `catalog`

## Database

### `dbmd_test_ea669c1aa57a606b`

**Owner:** `postgres`

**Encoding:** `UTF8`

**Locale provider:** `libc`

**LC_COLLATE:** `en_US.utf8`

**LC_CTYPE:** `en_US.utf8`

**Tablespace:** `pg_default`

**Template:** no

**Allows connections:** yes

**Connection limit:** -1



## Namespaces

| Name | Owner | Comment |
|---|---|---|
| `catalog` | `postgres` | - |
| `empty_space` | `postgres` | Reserved for future objects |
| `public` | `pg_database_owner` | standard public schema |


## Enum Types

| Type | Owner | Values | Comment |
|---|---|---|---|
| `catalog.account_state` | `postgres` | `invited, active, suspended` | Lifecycle of an account |


## Sequences

### `catalog.accounts_id_seq`

**Owner:** `postgres`

**Type:** `bigint`

**Start:** 1

**Minimum:** 1

**Maximum:** 9223372036854775807

**Increment:** 1

**Cache:** 1

**Cycle:** no

**Persistence:** `permanent`

**Owned by:** `catalog.accounts.id`

```sql
CREATE SEQUENCE "catalog"."accounts_id_seq" AS bigint INCREMENT BY 1 MINVALUE 1 MAXVALUE 9223372036854775807 START WITH 1 CACHE 1 NO CYCLE OWNED BY catalog.accounts.id;
```


## Tables

### `catalog.accounts`

#### Columns

| Column | Type | Nullable | Default | Notes |
|---|---|---|---|---|
| `id` | `bigint` | no | - | identity `by default`; storage `plain` |
| `email` | `text` | no | - | collation `pg_catalog."default"`; storage `extended` |
| `state` | `catalog.account_state` | no | `'invited'::catalog.account_state` | enum values `invited, active, suspended`; storage `plain` |


#### Constraints

| Name | Kind | Columns | Details |
|---|---|---|---|
| `accounts_email_not_null` | `not_null` | `email` | `NOT NULL email` |
| `accounts_id_not_null` | `not_null` | `id` | `NOT NULL id` |
| `accounts_pkey` | `primary_key` | `id` | `PRIMARY KEY (id)`; no inherit |
| `accounts_state_not_null` | `not_null` | `state` | `NOT NULL state` |


#### Indexes

| Name | Terms | Unique | Origin / details | Predicate |
|---|---|---|---|---|
| `accounts_pkey` | `id` ascending opclass `pg_catalog.int8_ops` nulls `last` | yes | postgres `btree`; owner `postgres`; constraint `accounts_pkey` | - |


#### PostgreSQL

**Kind:** `table`

**Owner:** `postgres`

**Persistence:** `permanent`

**Replica identity:** `default`

**Access method:** `heap`



## Views

### `catalog.account_counts`

**Kind:** `materialized_view`

**Owner:** `postgres`

**Persistence:** `permanent`

**Populated:** no

**Access method:** `heap`

**Option:** `fillfactor=80`

| Column | Type | Nullable |
|---|---|---|
| `state` | `catalog.account_state` | yes |
| `account_count` | `bigint` | yes |


#### Indexes

| Name | Terms | Unique | Origin / details | Predicate |
|---|---|---|---|---|
| `account_counts_state_idx` | `state` ascending opclass `pg_catalog.enum_ops` nulls `last` | no | postgres `btree`; owner `postgres`; Supports state lookups on the account summary | - |


```sql
 SELECT state,
    count(*) AS account_count
   FROM catalog.accounts
  GROUP BY state;
```

### `catalog.active_accounts`

Accounts allowed to sign in

**Kind:** `view`

**Owner:** `postgres`

**Persistence:** `permanent`

**Security barrier:** yes

**Security invoker:** yes

**Check option:** `local`

**Option:** `security_barrier=true`

**Option:** `security_invoker=true`

**Option:** `check_option=local`

| Column | Type | Nullable |
|---|---|---|
| `id` | `bigint` | yes |
| `email` | `text` | yes |


```sql
 SELECT id,
    email
   FROM catalog.accounts
  WHERE state = 'active'::catalog.account_state;
```

## Functions

### `catalog.normalize_email(value text)`

Normalizes an email address

**Kind:** `ordinary`

**Arguments:** `value text`

**Returns:** `text`

**Owner:** `postgres`

**Language:** `sql`

**Volatility:** `immutable`

**Parallel:** `safe`

**Security:** `invoker`

**Null input:** called

**Leakproof:** no

**Returns set:** no

**Cost:** 100

```sql
CREATE OR REPLACE FUNCTION catalog.normalize_email(value text)
 RETURNS text
 LANGUAGE sql
 IMMUTABLE PARALLEL SAFE
RETURN lower(TRIM(BOTH FROM value))

```


## Procedures

### `catalog.archive_account(IN account_id bigint, INOUT archived boolean, IN reason text)`

Marks an account archive request

**Arguments:** `IN account_id bigint, INOUT archived boolean, IN reason text DEFAULT 'manual'::text`

**Owner:** `postgres`

**Language:** `plpgsql`

**Security:** `definer`

**Setting:** `search_path=catalog, pg_temp`

```sql
CREATE OR REPLACE PROCEDURE catalog.archive_account(IN account_id bigint, INOUT archived boolean, IN reason text DEFAULT 'manual'::text)
 LANGUAGE plpgsql
 SECURITY DEFINER
 SET search_path TO 'catalog', 'pg_temp'
AS $procedure$
BEGIN
    archived := account_id > 0 AND reason <> '';
END;
$procedure$

```


## Object Privileges

### `schema public → PUBLIC USAGE`

**Object type:** `schema`

**Object:** `public`

**Grantor:** `pg_database_owner`

**Grantee:** `PUBLIC`

**Privilege:** `USAGE`



### `schema public → pg_database_owner CREATE`

**Object type:** `schema`

**Object:** `public`

**Grantor:** `pg_database_owner`

**Grantee:** `pg_database_owner`

**Privilege:** `CREATE`



### `schema public → pg_database_owner USAGE`

**Object type:** `schema`

**Object:** `public`

**Grantor:** `pg_database_owner`

**Grantee:** `pg_database_owner`

**Privilege:** `USAGE`



## Extensions

### `plpgsql`

PL/pgSQL procedural language

**Owner:** `postgres`

**Schema:** `pg_catalog`

**Version:** `1.0`

**Relocatable:** no

**Owned objects:** 4 (`function`: 3, `language`: 1)
